<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/header"
        android:textColor="#068FB1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/train"
        android:textColor="#068FB1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/trainIn"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:textColor="#068FB1"
        android:hint="@string/train1"
        android:paddingStart="14sp"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textPlaceH"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/placeH"
        android:textColor="#068FB1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainIn"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/placeIn"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/place"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPlaceH" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/departureTimeH"
        android:textColor="#068FB1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeIn"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/departureDateIn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/date"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/departureTimeIn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/time"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toEndOf="@+id/departureDateIn"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/arrivalTimeH"
        android:textColor="#068FB1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureTimeIn"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/arrivalDateIn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/date"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <EditText
        android:id="@+id/arrivalTimeIn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/time"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/arrivalDateIn"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/seatH"
        android:textColor="#068FB1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalDateIn"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/railwayCarriageIn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/railwayCarriage"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/seatIn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/seat"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/railwayCarriageIn"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/passengerH"
        android:textColor="#068FB1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/railwayCarriageIn"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/passengerIn"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/passenger"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/priceH"
        android:textColor="#068FB1"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengerIn"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/priceIn"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="#E1ECEF"
        android:ems="10"
        android:hint="@string/price"
        android:paddingStart="14sp"
        android:textColor="#068FB1"
        android:textColorHint="#87A3AA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#068FB1"
        android:text="Передача данных"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceIn"
        app:layout_constraintVertical_bias="0.125" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>